# mileStone2

./: Astar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCasheManager.cpp  FileCasheManager.h  IntPairMatrixCreator.cpp  IntPairMatrixCreator.h  Isearcher.h  MatrixOfPairs.cpp  MatrixOfPairs.h  MatrixOfStates.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  SearchSolver.h  Searchable.h  Searcher.h  Server.h  Sockets.cpp  Sockets.h  Solver.h  State.h  StringReverser.cpp  StringReverser.h  main.cpp
